yaml/example-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermgm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermgm
  template:
    metadata:
      labels:
        app: usermgm
    spec:
      containers:
        - name: app
          image: DOCKER_IMG_REPO_NAME/nodejs-docker:latest
          ports:
            - containerPort: 4000
          imagePullPolicy: Always
