yaml/example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usermgm
spec:
  selector:
    app: usermgm
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
